[metadata]
# replace with your username:
name = hxlm-crypto-eticaai
version = 0.7.1
author = Emerson Rocha
author_email = rocha@ieee.org
description = [proof-of-concept[not-production-ready] @see EticaAI/HXL-Data-Science-file-formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EticaAI/hxlm-crypto-eticaai
project_urls =
    Bug Tracker = https://github.com/EticaAI/hxlm-crypto-eticaai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6